# spconv_example

./: CMakeLists.txt  main.cu
spconv/: CMakeLists.txt
spconv/src/spconvlib/cumm/common/CompileInfo/: CMakeLists.txt  CompileInfo_algo_can_be_nvrtc_compiled.cc  CompileInfo_algo_can_use_ptx.cc  CompileInfo_arch_is_compatible.cc  CompileInfo_arch_is_compatible_gemm.cc  CompileInfo_arch_is_compiled.cc  CompileInfo_arch_is_compiled_gemm.cc  CompileInfo_gemm_algo_can_use_ptx.cc  CompileInfo_get_compiled_cuda_arch.cc  CompileInfo_get_compiled_cuda_version.cu  CompileInfo_get_compiled_gemm_cuda_arch.cc
spconv/src/spconvlib/cumm/conv/main/Ampere_s8s8s8s32f32tnt_m128n256k64m64n128k64A1T16832_400_C301LLL_SKD_S8/ConvKernel/: CMakeLists.txt  ConvKernel_conv_kernel.cu
spconv/src/spconvlib/cumm/conv/main/ConvMainUnitTest/: CMakeLists.txt  ConvMainUnitTest_extract_mnk.cc  ConvMainUnitTest_get_all_conv_algo_desp.cc  ConvMainUnitTest_implicit_gemm2.cu  ConvMainUnitTest_matmul_split_Ampere_f16f16f16_0.cu  ConvMainUnitTest_matmul_split_Ampere_f32f32f32_0.cu  ConvMainUnitTest_matmul_split_Ampere_s8s8f16_0.cu  ConvMainUnitTest_matmul_split_Ampere_s8s8f32_0.cu  ConvMainUnitTest_matmul_split_Ampere_s8s8s8_0.cu  ConvMainUnitTest_matmul_split_Simt_f16f16f16_0.cu  ConvMainUnitTest_matmul_split_Simt_f32f32f32_0.cu  ConvMainUnitTest_matmul_split_Turing_f16f16f16_0.cu  ConvMainUnitTest_matmul_split_Turing_s8s8f16_0.cu  ConvMainUnitTest_matmul_split_Turing_s8s8f32_0.cu  ConvMainUnitTest_matmul_split_Turing_s8s8s8_0.cu  ConvMainUnitTest_matmul_split_Volta_f16f16f16_0.cu
spconv/src/spconvlib/cumm/conv/main/Turing_f16f16f16f16f16tnt_m32n128k32m32n32k32A1T1688_200_C301LLL_SK/ConvKernel/: CMakeLists.txt  ConvKernel_conv_kernel.cu
spconv/src/spconvlib/cumm/conv/main/Volta_f16f16f16f16f16tnt_m64n128k32m32n64k32A1T884_200_C301LLL_SK/ConvKernel/: CMakeLists.txt  ConvKernel_conv_kernel.cu
spconv/src/spconvlib/cumm/conv/main/cpSimt_f32f32f32f32f32tnt_m32n256k8m32n64k8A1_200_C301LLL_SK/ConvParams/: CMakeLists.txt  ConvParams_ConvParams.cu
spconv/src/spconvlib/cumm/conv/main/cpTuring_s8s8s8s32f32tnt_m128n256k64m64n128k64A1T8816_200_C301LLL_SK_S8/ConvParams/: CMakeLists.txt  ConvParams_ConvParams.cu
spconv/src/spconvlib/cumm/gemm/main/GemmMainUnitTest/: CMakeLists.txt  GemmMainUnitTest_align_to_power2.cc  GemmMainUnitTest_device_synchronize.cc  GemmMainUnitTest_extract_mnk.cc  GemmMainUnitTest_get_all_algo_desp.cc  GemmMainUnitTest_matmul2.cu  GemmMainUnitTest_matmul_split_Ampere_s8s8s8_1.cu  GemmMainUnitTest_matmul_split_SimtDP4A_s8s8s8_1.cu  GemmMainUnitTest_matmul_split_Simt_f16f16f16_1.cu  GemmMainUnitTest_matmul_split_Simt_f32f32f32_1.cu  GemmMainUnitTest_matmul_split_Turing_f16f16f16_1.cu  GemmMainUnitTest_matmul_split_Turing_s8s8s8_1.cu  GemmMainUnitTest_matmul_split_Volta_f16f16f16_1.cu  GemmMainUnitTest_simple_select_tile_shape.cc  GemmMainUnitTest_stream_synchronize.cc
spconv/src/spconvlib/cumm/gemm/main/Simt_f16f16f16f32f32ttt_m64n64k8m32n32k8A1_200_S1/GemmKernel/: CMakeLists.txt  GemmKernel_gemm_kernel.cu
spconv/src/spconvlib/spconv/csrc/hash/core/HashTable/: CMakeLists.txt  HashTable_HashTable.cc  HashTable_assign_arange_.cu  HashTable_clear.cu  HashTable_insert.cu  HashTable_insert_exist_keys.cu  HashTable_items.cu  HashTable_query.cu  HashTable_size_cpu.cu
spconv/src/spconvlib/spconv/csrc/sparse/all/ops1d/SparseConvIndicesKernel/: CMakeLists.txt  SparseConvIndicesKernel_assign_output_direct_hash.cu  SparseConvIndicesKernel_calc_conv_indices_stage2_mask_output.cu  SparseConvIndicesKernel_generate_conv_inds_mask_stage1.cu  SparseConvIndicesKernel_generate_conv_inds_mask_stage1_direct_table.cu  SparseConvIndicesKernel_generate_conv_inds_stage1.cu  SparseConvIndicesKernel_generate_conv_inds_stage1_5.cu  SparseConvIndicesKernel_generate_conv_inds_stage2.cu  SparseConvIndicesKernel_generate_conv_inds_stage2_mask.cu  SparseConvIndicesKernel_generate_conv_inds_stage2_mask_direct_table.cu  SparseConvIndicesKernel_generate_subm_conv_inds.cu  SparseConvIndicesKernel_unique_and_assign_output_direct_hash.cu  SparseConvIndicesKernel_unique_hash.cu
spconv/src/spconvlib/spconv/csrc/sparse/all/ops_cpu2d/Point2VoxelCPU/: CMakeLists.txt  Point2VoxelCPU_Point2VoxelCPU.cc  Point2VoxelCPU_calc_meta_data.cc  Point2VoxelCPU_get_grid_size.cc  Point2VoxelCPU_point_to_voxel.cc  Point2VoxelCPU_point_to_voxel_empty_mean.cc  Point2VoxelCPU_point_to_voxel_empty_mean_static.cc  Point2VoxelCPU_point_to_voxel_static.cc
spconv/src/spconvlib/spconv/csrc/sparse/alloc/ExternalAllocator/: CMakeLists.txt  ExternalAllocator_empty_guard.cc  ExternalAllocator_full_float_guard.cc  ExternalAllocator_full_int_guard.cc  ExternalAllocator_zeros_guard.cc
spconv/src/spconvlib/spconv/csrc/sparse/convops/ExternalSpconvMatmul/: CMakeLists.txt  ExternalSpconvMatmul_indice_conv_bwd_cpu_gemm.cc  ExternalSpconvMatmul_indice_conv_bwd_init_gemm.cc  ExternalSpconvMatmul_indice_conv_cpu_gemm.cc  ExternalSpconvMatmul_indice_conv_init_gemm.cc
spconv/src/spconvlib/spconv/csrc/sparse/convops/SimpleExternalSpconvMatmul/: CMakeLists.txt  SimpleExternalSpconvMatmul_SimpleExternalSpconvMatmul.cc  SimpleExternalSpconvMatmul_check_cublas_status.cc  SimpleExternalSpconvMatmul_dtor_pccm_destructorSimpleExternalSpconvMatmul.cc  SimpleExternalSpconvMatmul_indice_conv_init_gemm.cc  SimpleExternalSpconvMatmul_matmul.cc  SimpleExternalSpconvMatmul_matmul_colmajor.cc  SimpleExternalSpconvMatmul_tv_dtype_to_blaslt.cc
spconv/src/spconvlib/spconv/csrc/sparse/convops/convops/ConvTunerSimple/: CMakeLists.txt  ConvTunerSimple_ConvTunerSimple.cc  ConvTunerSimple_cached_get_nvrtc_params.cc  ConvTunerSimple_get_all_available.cc  ConvTunerSimple_get_available_algo_str_from_arch.cc  ConvTunerSimple_get_tuned_algo.cc  ConvTunerSimple_query_workspace_size.cc  ConvTunerSimple_run_with_tuned_result.cc  ConvTunerSimple_tune_and_cache.cc
spconv/src/spconvlib/spconv/csrc/sparse/convops/gemmops/GemmTunerSimple/: CMakeLists.txt  GemmTunerSimple_GemmTunerSimple.cc  GemmTunerSimple_cached_get_nvrtc_params.cc  GemmTunerSimple_extract_mnk.cc  GemmTunerSimple_extract_mnk_vector.cc  (+5 more)
(+22201 files in other folders)
