
cmake_minimum_required(VERSION 3.20)
add_library(spconvlib_spconv_csrc_sparse_convops_ExternalSpconvMatmul OBJECT ExternalSpconvMatmul_indice_conv_init_gemm.cc ExternalSpconvMatmul_indice_conv_cpu_gemm.cc ExternalSpconvMatmul_indice_conv_bwd_init_gemm.cc ExternalSpconvMatmul_indice_conv_bwd_cpu_gemm.cc)
# set_target_properties(spconvlib_spconv_csrc_sparse_convops_ExternalSpconvMatmul PROPERTIES POSITION_INDEPENDENT_CODE ON)
set_target_properties( spconvlib_spconv_csrc_sparse_convops_ExternalSpconvMatmul PROPERTIES CXX_STANDARD 14 CUDA_STANDARD 14)

# set_target_properties(spconvlib_spconv_csrc_sparse_convops_ExternalSpconvMatmul PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
# set_target_properties(spconvlib_spconv_csrc_sparse_convops_ExternalSpconvMatmul PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)

target_include_directories(spconvlib_spconv_csrc_sparse_convops_ExternalSpconvMatmul PRIVATE
    /usr/local/cuda/include
    /home/daisuke/.local/lib/python3.10/site-packages/cumm/include)
target_compile_options(spconvlib_spconv_csrc_sparse_convops_ExternalSpconvMatmul PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:
     -DTV_CUDA
    -gencode=arch=compute_75,code=[sm_75,compute_75]
    -Xcudafe "--diag_suppress=implicit_return_from_non_void_function"
    --expt-relaxed-constexpr
    -Xcompiler="-fPIC"
    -Xcompiler='-O3'>)
target_compile_options(spconvlib_spconv_csrc_sparse_convops_ExternalSpconvMatmul PRIVATE $<$<COMPILE_LANGUAGE:CXX>: 
    -DTV_CUDA
    -O3
    -fPIC>)
                